--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "formik": "^2.1.4",
     "history": "^4.10.1",
     "lodash": "^4.17.15",
+    "moment": "^2.24.0",
     "normalize.css": "^8.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
